# scikit-demo

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/cpp/: add_eigen.hpp
src/interface/: example.cpp
tests/: test_bindings.py
